完善单元测试

--- a/src/DPB/DPB.csproj
+++ b/src/DPB/DPB.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StartRun.cs" />
+    <Compile Include="LetsGo.cs" />
     <Compile Include="Models\Manifest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
