--- a/src/DPB.Tests/DPB.Tests.csproj
+++ b/src/DPB.Tests/DPB.Tests.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="ManifestTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourceDir\TestManifest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
