完成内容过滤测试

--- a/src/DPB.Tests/DPB.Tests.csproj
+++ b/src/DPB.Tests/DPB.Tests.csproj
@@ -66,6 +66,8 @@
   <ItemGroup>
     <Compile Include="ManifestTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourceDir\RemoveFiles\RemoveFile1.cs" />
+    <Compile Include="SourceDir\RemoveFiles\RemoveFile2.cs" />
     <Compile Include="SourceDir\TestManifest.cs" />
   </ItemGroup>
   <ItemGroup>
