--- a/src/DPB.Tests/DPB.Tests.csproj
+++ b/src/DPB.Tests/DPB.Tests.csproj
@@ -70,9 +70,12 @@
     <Content Include="SourceDir\RemoveFiles\KeepFile.txt" />
     <Content Include="SourceDir\RemoveFiles\RemoveFile2.txt" />
     <Compile Include="SourceDir\TestManifest.cs" />
+    <Content Include="SourceDir\XmlFiles\XMLFile2.xml" />
+    <Content Include="SourceDir\XmlFiles\XMLFile1.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="SourceDir\JsonFiles\jsconfig1.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DPB\DPB.csproj">
