add OmitFile property in Manifest

--- a/src/DPB.Tests/DPB.Tests.csproj
+++ b/src/DPB.Tests/DPB.Tests.csproj
@@ -71,6 +71,7 @@
     <Content Include="SourceDir\RemoveFiles\RemoveFile1.txt" />
     <Content Include="SourceDir\RemoveFiles\KeepFile.txt" />
     <Content Include="SourceDir\RemoveFiles\RemoveFile2.txt" />
+    <Compile Include="SourceDir\TestManifest-Keep.cs" />
     <Compile Include="SourceDir\TestManifest.cs" />
     <Content Include="SourceDir\XmlFiles\XMLFile2.xml" />
     <Content Include="SourceDir\XmlFiles\XMLFile1.xml" />
