--- a/src/DPB.Tests/DPB.Tests.csproj
+++ b/src/DPB.Tests/DPB.Tests.csproj
@@ -67,12 +67,16 @@
     <Compile Include="BuildProject.cs" />
     <Compile Include="ManifestTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="SourceDir\EmptyDirectoryToBeRemoved\FileRemove2.txt" />
+    <Content Include="SourceDir\EmptyDirectoryToBeRemoved\FileRemove1.txt" />
     <Content Include="SourceDir\RemoveFiles\NormalFile.txt" />
     <Content Include="SourceDir\RemoveFiles\RemoveFile1.txt" />
     <Content Include="SourceDir\RemoveFiles\KeepFile.txt" />
     <Content Include="SourceDir\RemoveFiles\RemoveFile2.txt" />
     <Compile Include="SourceDir\TestManifest-Keep.cs" />
     <Compile Include="SourceDir\TestManifest.cs" />
+    <Content Include="SourceDir\ThisDirectoryIsNotEmpty\FileRemove.txt" />
+    <Content Include="SourceDir\ThisDirectoryIsNotEmpty\FileRemoveOmit.txt" />
     <Content Include="SourceDir\XmlFiles\XMLFile2.xml" />
     <Content Include="SourceDir\XmlFiles\XMLFile1.xml" />
   </ItemGroup>
