--- a/src/DPB/DPB.csproj
+++ b/src/DPB/DPB.csproj
@@ -28,7 +28,7 @@ You can add annotations to the code templates, and use DPB to automatically filt
     <PackageProjectUrl>https://github.com/JeffreySu/WeiXinMPSDK</PackageProjectUrl>
     <PackageIconUrl>http://sdk.weixin.senparc.com/Images/Logo.jpg</PackageIconUrl>
     <PackageReleaseNotes>
-  DPB
+      How to use: https://github.com/Senparc/DPB
     </PackageReleaseNotes>
     <RepositoryUrl>https://github.com/JeffreySu/WeiXinMPSDK</RepositoryUrl>
   </PropertyGroup>
