--- a/src/DPB.Tests/DPB.Tests.csproj
+++ b/src/DPB.Tests/DPB.Tests.csproj
@@ -79,6 +79,7 @@
     <Content Include="SourceDir\CustomFunctionFiles\CustomFunctionFile1.txt" />
     <Content Include="SourceDir\EmptyDirectoryToBeRemoved\FileRemove2.txt" />
     <Content Include="SourceDir\EmptyDirectoryToBeRemoved\FileRemove1.txt" />
+    <Content Include="SourceDir\KeepPartsOfContent\KeepPartsOfContent.txt" />
     <Content Include="SourceDir\Startup.cs.txt" />
     <Content Include="SourceDir\RemoveFiles\NormalFile.txt" />
     <Content Include="SourceDir\RemoveFiles\RemoveFile1.txt" />
@@ -103,6 +104,7 @@
       <Name>DPB</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
