--- a/src/DPB/DPB.csproj
+++ b/src/DPB/DPB.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard2.0;</TargetFrameworks>
-    <Version>0.6.6</Version>
+    <Version>0.6.7</Version>
     <AssemblyName>DPB</AssemblyName>
     <RootNamespace>DPB</RootNamespace>
     <GeneratePackageOnBuild Condition=" '$(Configuration)' == 'Release' ">true</GeneratePackageOnBuild>
@@ -32,6 +32,7 @@ You can add annotations to the code templates, and use DPB to automatically filt
 
 		v0.6.0 update memory-cache model
 		v0.6.6 update for mark filter rules
+		v0.6.7 fix bug: a line is kept when it contains any DPBMARK keyword in content instead of after DPBMARK.
 	</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/JeffreySu/WeiXinMPSDK</RepositoryUrl>
   </PropertyGroup>
